# fm4a

./: README.md  pyproject.toml  requirements.txt  setup.sh
configs/: config.yaml  config_small.yaml
session_1/: PrithviWxC_input_data.ipynb  PrithviWxC_rollout.ipynb  PrithviWxC_tc_forecast.ipynb  prithvi_wxc_intro.ipynb  prithvi_wxc_tc_forecast.ipynb
session_2/: eccc_downscaling_finetune.ipynb  eccc_downscaling_inference.ipynb
session_3/: PrithviPrecip_introduction.ipynb
src/fm4a/: definitions.py  download.py  eccc_downscaling.py  hurdat.py  model.py
tests/: test_download.py
